# python-tabulate

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG  HOWTOPUBLISH  LICENSE  MANIFEST.in  README  README.md  README.rst  appveyor.yml  benchmark.py  pyproject.toml  setup.cfg  setup.py  tabulate.py  test_input.py  test_output.py  test_regression.py  tox.ini
.circleci/: config.yml  requirements.txt
.github/workflows/: github-actions-tox.yml  lint.yml  pylint.yaml  release.yml  tabulate.yml
benchmark/: benchmark.py  requirements.txt
examples/: people.csv  people.jsonl
tabulate/: __init__.py  __main__.py  cli.py
tabulate.egg-info/: PKG-INFO  SOURCES.txt
test/: common.py  test_api.py  test_cli.py  test_grapheme_clusters.py  test_input.py  test_internal.py  test_no_wcwidth.py  test_output.py  test_regression.py  test_textwrapper.py  test_vertical.py  test_vertical_to_horizontal.py
