[metadata]
name = tabulate
author = Sergey Astanin
author_email = s.astanin@gmail.com
license = MIT
description = Pretty-print tabular data
url = https://github.com/astanin/python-tabulate
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries

[options]
packages = tabulate
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts = tabulate = tabulate:_main

[options.extras_require]
widechars = wcwidth
